--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Scheduler</string>
-    <string name="tab_text_statistics">Statistics</string>
+    <string name="tab_text_weekly">Weekly</string>
     <string name="tab_text_timeline">Timeline</string>
     <string name="tab_text_calendar">Calendar</string>
     <!-- TODO: Remove or change this placeholder text -->
